# jupyter-mcp-server

./: .gitignore  CHANGELOG.md  README.md  SHOWCASE.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: IMAGE_EXTRACTION_README.md  MCP_TOOLS_SUMMARY.md  SETUP.md
examples/: claude_desktop_config.json  mcp_notebook.ipynb  new_notebook.ipynb
notebooks/: mcp_notebook.ipynb
scripts/: get_claude_config.py  start_jupyter.sh
src/: analysis_notebook.ipynb  jupyter_mcp_server.py
